external-crates/move/crates/move-compiler/tests/pera_mode/one_time_witness/init_unbound_type.move
module a::m {
    fun init(_ctx: who::TxContext) {}
}

module a::beep {
    struct BEEP has drop {}
    fun init(_: Who, _ctx: &mut pera::tx_context::TxContext) {}
}

module pera::tx_context {
    struct TxContext {}
}
